Make agrarianskies2 image have rcon.